<?xml version="1.0"?>
<package format="3">
  <name>nlink_parser_ros2</name>
  <version>2.1.0</version>
  <description>The nlink parser package in ros2, used for products of nooploop</description>

  <maintainer email="yeogyeom1@chungbuk.ac.kr">YG_Kim</maintainer>
  <author email="aarush.gupta@hopetechnik.com">Aarush Gupta</author>
  <author email="nooploop.studio@gmail.com">Samuel Hsu</author>

  <license>BSD</license>

  <url type="website">https://www.nooploop.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nlink_parser_ros2_interfaces</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
